more fixes on mobile screen.

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,8 @@ header {
 nav {
   align-items: center;
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  justify-content: space-between;
   padding: 1.1rem 1.2rem;
 }
 
@@ -283,6 +284,7 @@ footer {
 .footer-top {
   align-self: center;
   padding: 1.3rem 3rem;
+  width: 100%;
 }
 
 .footer-bottom {
@@ -326,6 +328,103 @@ footer {
 .footer-right ul > li {
   margin-bottom: 0;
   margin-top: 0;
+}
+
+.nav__menu {
+  background-color: transparent;
+  width: 32px;
+  height: 32px;
+}
+
+.nav__mobile ul,
+.nav__desktop ul {
+  padding: 0;
+}
+
+.nav__mobile ul li {
+  text-transform: uppercase;
+}
+
+.nav__mobile,
+.nav__desktop {
+  display: flex;
+}
+
+.nav__mobile img,
+.nav__mobile ul li:nth-child(1) {
+  margin-right: 15px;
+}
+
+.nav__mobile ul {
+  color: var(--color-link-footer);
+  font-weight: bold;
+}
+
+.footer-bottom__mobile {
+  color: var(--color-link-footer);
+  display: grid;
+  flex-direction: column;
+  grid-template-columns: 1fr;
+  /* grid-template-rows: repeat(3, 1fr); */
+  /* justify-content: center; */
+  /* padding: 0.5rem 0; */
+  row-gap: 5px;
+  width: 100%;
+}
+
+.footer-bottom__mobile > * {
+  font-size: 1.3rem;
+}
+
+.footer-bottom__mobile .footer-left ul {
+  justify-content: center;
+}
+
+.footer-bottom__mobile .footer-right ul {
+  justify-content: center;
+}
+
+.footer-bottom__mobile .footer-right ul li {
+  margin-right: 16px;
+}
+
+.footer-bottom__mobile .footer-center p {
+  text-align: center;
+}
+
+.footer-bottom__mobile .footer-center span {
+  font-weight: bold;
+  color: #222;
+}
+
+.footer-bottom__mobile .footer-center {
+  border-top: 1px solid #d2d2d2;
+  border-bottom: 1px solid #d2d2d2;
+  grid-area: 1/1/2/2;
+  padding: 20px;
+  width: 100%;
+}
+
+.footer-bottom__mobile .footer-center p {
+  margin: 0;
+}
+
+.footer-bottom__mobile .footer-left {
+  grid-area: 3/1/4/2;
+  padding: 15px;
+}
+
+.footer-bottom__mobile .footer-left ul li {
+  margin-right: 1.5rem;
+}
+
+.footer-bottom__mobile .footer-right {
+  grid-area: 2/1/3/2;
+  padding-top: 10px;
+}
+
+.footer-bottom__mobile .footer-right ul {
+  font-size: 1.3rem;
 }
 
 @media screen and (max-width: 1024px) {
@@ -376,6 +475,10 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
+  .nav__desktop ul {
+    display: none;
+  }
+
   .footer-bottom .footer-left .list-items > li,
   .footer-bottom .footer-right .list-items > li {
     margin-right: 2rem;
@@ -411,5 +514,43 @@ footer {
 
   .google-offers ul > li {
     margin: 0 1rem;
+  }
+
+  .footer-bottom {
+    display: none;
+  }
+
+  .footer-top {
+    font-size: 15px;
+    padding: 0.6rem 1.2rem;
+  }
+
+  .google-offers ul {
+    font-size: 13px;
+    flex-wrap: wrap;
+    padding: 15px;
+    justify-content: center;
+  }
+
+  nav {
+    padding-top: 0.5rem;
+  }
+
+  .nav__mobile a:active {
+    border-bottom: 1px solid dodgerblue;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  nav {
+    justify-content: flex-end;
+  }
+
+  .nav__mobile {
+    display: none;
+  }
+
+  .footer-bottom__mobile {
+    display: none;
   }
 }
